--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,8 +24,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install \
-          mkdocs-material \
-          mkdocs-git-revision-date-localized-plugin \
-          mkdocs-git-committers-plugin-2
+      - run: pip install -r requirements.txt
       - run: mkdocs gh-deploy --force
