--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # fetch complete history
       - name: Configure Git Credentials
         run: |
           git config user.name github-actions[bot]
