--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ plugins:
       enable_creation_date: true
       type: iso_datetime
       timezone: Asia/Shanghai
-      fallback_to_build_date: true
+      #fallback_to_build_date: false
   - git-committers:
       repository: ZJUISEELab/EE-Archive
       branch: main
