css adjust: 调整贡献者头像灰度为彩色不透明

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,6 +97,7 @@ plugins:
       repository: ZJUISEELab/EE-Archive
       branch: main
       enabled: !ENV [CI, false]
+      # enabled: true
   #- git-authors
 
 markdown_extensions:
