add: 信电物（测试页面）

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - 专业基础课程/index.md
   - 专业必修课程:
     - 专业必修课程/index.md
+    - 信息电⼦学物理基础: 专业必修课程/信电物.md
   - 专业模块课程（课程组1）:
     - 专业模块课程1/index.md
   - 专业模块课程（课程组2）:
