--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ nav:
     - 专业模块课程1/index.md
   - 专业模块课程（课程组2）:
     - 专业模块课程2/index.md
+    - 天线理论与设计: 专业模块课程2/天线.md
   - 实践教学环节:
     - 实践教学环节/index.md
   - 香农班:
