--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
     - 信息电⼦学物理基础: 专业必修课程/信电物.md
   - 专业模块课程（课程组1）:
     - 专业模块课程1/index.md
+    - 射频电路与系统: 专业模块课程1/射频.md
   - 专业模块课程（课程组2）:
     - 专业模块课程2/index.md
     - 天线理论与设计: 专业模块课程2/天线.md
