--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
   - 专业必修课程:
     - 专业必修课程/index.md
     - 信息电⼦学物理基础: 专业必修课程/信电物.md
+    - 计算机组成与设计: 专业必修课程/计组.md
   - 专业模块课程（课程组1）:
     - 专业模块课程1/index.md
     - 射频电路与系统: 专业模块课程1/射频.md
