docs: 边缘计算，计组补充

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
   - 专业模块课程（课程组2）:
     - 专业模块课程2/index.md
     - 天线理论与设计: 专业模块课程2/天线.md
+    - 边缘计算开发实践: 专业模块课程2/边缘计算.md
   - 实践教学环节:
     - 实践教学环节/index.md
   - 香农班:
